[package]
name = "filesystem-dupe-scraper"
authors = ["jarquet@gmail.com"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.26.3"
log = "0.4.14"
env_logger = "0.9.0"
crypto = "0.3.0"
tokio = { version = "1.16.1", features = ["full"] }
walkdir = "2.3.2"
clap = { version = "3.0.13", features = ["derive"] }
md-5 = "0.10.0"
# futures = { version = "0.3", default-features = false }
futures = "0.3.19"
